# asterisk-soa-demo

./: Makefile.am  README  tntsoafrontent.conf.example
src/backend/: Makefile.am
src/frontend/: Makefile  Makefile.am  main.cpp
src/frontend/Core/controller/: StatusController.cpp  StatusController.h
src/frontend/Core/model/: Config.cpp  Config.h  TntsoaException.h  WorkPlace.h
src/frontend/Core/resource/: style.css
src/frontend/Core/view/: StatusView.ecpp
